# Kahu

./: CMakeLists.txt  LICENSE  README.md  clashtower.nnue  kuba.nnue  mini_tournament.py  nnue_tournament.py  tournament.py
gui/: BoardWidget.cpp  BoardWidget.h  CMakeLists.txt  GameSettingsDialog.cpp  GameSettingsDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
src/: datagen.cpp  datagen.h  engine.cpp  engine.h  main.cpp  nnue.cpp  nnue.h  position.cpp  position.h  protocol.cpp  protocol.h  types.h  zobrist.cpp  zobrist.h
